# MCP-Apps

./: LINKEDIN_ARTICLE.md  README.md
financial-review-mcp/: pyproject.toml
financial-review-mcp/financial_review_mcp/: __main__.py  server.py
financial-review-mcp/financial_review_mcp/tests/: widget_test.html
financial-review-mcp/financial_review_mcp/web/: widget.html
flight-tracker-agent/: m365agents.yml
flight-tracker-agent/appPackage/: ai-plugin.json  declarativeAgent.json  instruction.txt  manifest.json  mcp-tools.json
flight-tracker-agent/env/: .env.dev
flight-tracker-mcp/: FLIGHT_TRACKER_MCP_GUIDE.md
