[project]
name = "financial-review-mcp"
version = "0.1.0"
description = "MCP server for Human-in-the-Loop review of financial statements in M365 Copilot"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.1.3",
    "uvicorn>=0.29",
    "starlette>=0.37",
    "python-dotenv>=1.0",
]

[project.scripts]
financial-review-mcp = "financial_review_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["financial_review_mcp"]
